[package]
name = "credsdefault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
anyhow = "1.0"
colored = "2.0"
futures-util = "0.3"
tokio-util = "0.7"
csv = "1.3"